--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -2,10 +2,15 @@ FROM php:7.2-apache
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+# apt-get -y install realmd sssd sssd-tools samba-common krb5-user packagekit samba-common-bin samba-libs adcli ntp
+
 RUN apt-get update && apt-get install -y \
     gnupg git zlib1g-dev libpng-dev libicu-dev libjpeg-dev libffi-dev wget zip \
     libxml2-dev libfreetype6 libfreetype6-dev g++ make autoconf \
-    build-essential libfontconfig1-dev libssl-dev libx11-dev libxext-dev libxrender-dev libldap2-dev python vim nano \
+    build-essential libfontconfig1-dev libssl-dev libx11-dev libxext-dev libxrender-dev \
+    libldap2-dev libnss-ldap libpam-ldap ldap-utils \
+    realmd sssd sssd-tools samba-common krb5-user packagekit samba-common-bin samba-libs adcli ntp \
+    iputils-ping ntpdate krb5-user python vim nano \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
     && pecl install xdebug \
     && pecl install redis \
@@ -17,8 +22,21 @@ RUN apt-get update && apt-get install -y \
 RUN a2enmod rewrite
 
 COPY 000-default.conf /etc/apache2/sites-available/000-default.conf
-
 COPY php.ini /usr/local/etc/php/
+
+CMD mkdir /etc/dhcp;
+CMD chmod 777 /etc/dhcp
+
+CMD mkdir /etc/ldap;
+CMD chmod 777 /etc/ldap
+
+CMD mkdir /etc/sssd
+CMD chmod 777 /etc/sssd
+
+#CMD chmod 777 /etc/sssd/sssd.conf
+
+#realm leave
+#RUN realm --verbose join --user=admin_cbautista --computer-ou=OU=Computers_Unix,DC=pandgassociates,DC=com pandgassociates.com
 
 # COPY xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
 
